--- a/frontend/src/components/SearchBar/searchBar.scss
+++ b/frontend/src/components/SearchBar/searchBar.scss
@@ -7,9 +7,6 @@
 	width: 452px;
 	position: relative;
 	@include input-icon-box($border-radius-sm, $input-padding-y-sm, $input-padding-x-sm);
-	&:hover {
-		border-color: $input-focus-border-color;
-	}
 }
 
 #search,
